kubernetes-manifests/cart-redis-total.yaml
apiVersion: v1
kind: Service
metadata:
  name: cart-redis
  labels:
    app: acmefit
    service: cart-redis
spec:
  ports:
    - port: 6379
      name: redis-cart
  selector:
    app: acmefit
    service: cart-redis
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-redis
  labels:
    app: acmefit
    service: cart-redis
    version: 1.0.0
spec:
  selector:
    matchLabels:
      app: acmefit # has to match .spec.template.metadata.labels
      service: cart-redis
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit # has to match .spec.selector.matchLabels
        service: cart-redis
    spec:
      containers:
        - name: cart-redis
          image: bitnami/redis
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "100Mi"
          ports:
            - name: redis
              containerPort: 6379
              protocol: "TCP"
          volumeMounts:
            - mountPath: /var/lib/redis
              name: cart-redis-data
              #            - mountPath: /etc/redis
              #              name: redis-config
      volumes:
        - name: cart-redis-data
          persistentVolumeClaim:
            claimName: cart-redis-data
        # - name: cart-redis-data
        #   emptyDir: {}
#        - name: redis-config
#          configMap:
#            name: redis-config
#            items:
#              - key: redis-config
#                path: redis.conf
