kubernetes-manifests/catalog-total.yaml
apiVersion: v1
kind: Service
metadata:
  name: catalog
  labels:
    app: acmefit
    service: catalog
spec:
  ports:
    - name: http-catalog
      protocol: TCP
      port: 8082
  selector:
    app: acmefit
    service: catalog
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog
  labels:
    app: acmefit
    service: catalog
spec:
  selector:
    matchLabels:
      app: acmefit
      service: catalog
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: catalog
    spec:
      # volumes:
      #   - name: acmefit-catalog-data
      #     emptyDir: {}
      containers:
        - image: gcr.io/vmwarecloudadvocacy/acmeshop-catalog:latest
          imagePullPolicy: "Always"
          name: catalog
          ports:
            - containerPort: 8082
              name: catalog
          volumeMounts:
            - mountPath: "/data"
              name: "acmefit-catalog-data"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: acmefit-catalog-data
          persistentVolumeClaim:
            claimName: acmefit-catalog-data
