kubernetes-manifests/loadgenerator.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: loadgenerator
  labels:
    app: acmefit
    service: loadgenerator
spec:
  ports:
    - name: http-loadgenerator
      protocol: TCP
      port: 8089
  selector:
    app: acmefit
    service: loadgenerator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
  labels:
    app: acmefit
    service: loadgenerator
spec:
  selector:
    matchLabels:
      app: acmefit
      service: loadgenerator
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: loadgenerator
    spec:
      containers:
        - image: locustio/locust:latest
          imagePullPolicy: "Always"
          name: loadgenerator
          env: []
          ports:
            - containerPort: 8089
              name: loadgenerator
          resources:
            requests:
              memory: "64Mi"
              cpu: "10m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          # command: ["/bin/sh"]
          # args: ["-c", "sleep 5000"]
          command:
           - "locust"
          args: 
           - "-f"
           - "/data/locustfile.py"
           - "--headless"
           - "-u"
           - "100"
           - "-r" 
           - "5"
          #  - "--run-time"
          #  - "1h"
           - "--host=http://acme-fitness.sandbox.runwhen.com"
          volumeMounts:
            - mountPath: "/data"
              name: "acmefit-loadgenerator-data"
      volumes:
        - name: acmefit-loadgenerator-data
          configMap:
            name: locustfile
            defaultMode: 0777
