kubernetes-manifests/order-db-total.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-postgres
  labels:
    app: acmefit
    service: order-db
spec:
  ports:
    - port: 5432
      name: postgres-order
      protocol: TCP
  selector:
    app: acmefit
    service: order-db
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-postgres
  labels:
    app: acmefit
    service: order-db
spec:
  selector:
    matchLabels:
      app: acmefit
      service: order-db
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: order-db
    spec:
      containers:
        - name: postgres
          image: postgres:9.5
          imagePullPolicy: "Always"
          ports:
            - containerPort: 5432
              name: order-postgres
              protocol: "TCP"
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      volumes:
        # - name: postgredb
        #   emptyDir: {}
        - name: postgredb
          persistentVolumeClaim:
            claimName: postgredb
