kubernetes-manifests/payment-total.yaml
apiVersion: v1
kind: Service
metadata:
  name: payment
  labels:
    app: acmefit
    service: payment
spec:
  ports:
    - name: http-payment
      protocol: TCP
      port: 9000
  selector:
    app: acmefit
    service: payment
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  labels:
    app: acmefit
    service: payment
spec:
  selector:
    matchLabels:
      app: acmefit
      service: payment
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: payment
    spec:
      containers:
        - image: gcr.io/vmwarecloudadvocacy/acmeshop-payment:latest
          name: payment
          ports:
            - containerPort: 9000
              name: payment
