kubernetes-manifests/users-total.yaml
apiVersion: v1
kind: Service
metadata:
  name: users
  labels:
    app: acmefit
    service: users
spec:
  ports:
    - name: http-users
      protocol: TCP
      port: 8083
  selector:
    app: acmefit
    service: users
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  labels:
    app: acmefit
    service: users
spec:
  selector:
    matchLabels:
      app: acmefit
      service: users
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: acmefit
        service: users
    spec:
      volumes:
        - name: acmefit-users-data
          emptyDir: {}
      containers:
        - image: gcr.io/vmwarecloudadvocacy/acmeshop-user:latest
          imagePullPolicy: "Always"
          name: users
          ports:
            - containerPort: 8083
              name: users
          volumeMounts:
            - mountPath: "/data"
              name: "acmefit-users-data"
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
